00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/claro-mock-service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-09-08T13:57:31Z"
  name: claro-mock-service
  namespace: 3scale-project
  resourceVersion: "250795202"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/claro-mock-service
  uid: 5b38530b-7fe6-43e2-aee5-004a995899fa
spec:
  host: claro-mock-service-3scale-project.apps.osepext01.claro.amx
  port:
    targetPort: 8080
  to:
    kind: Service
    name: srvc-claro-mock-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-09-08T13:57:32Z"
      status: "True"
      type: Admitted
    host: claro-mock-service-3scale-project.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-09-08T13:57:32Z"
      status: "True"
      type: Admitted
    host: claro-mock-service-3scale-project.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
