00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/zync-3scale-api-wmmdn.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    3scale.net/gid: gid://zync/Entry/87
    zync.3scale.net/gid: gid://zync/Proxy/5
    zync.3scale.net/host: api-dev-apicast-production.apps.osepext01.claro.amx
  creationTimestamp: "2020-08-13T19:40:19Z"
  generateName: zync-3scale-api-
  labels:
    3scale.net/created-by: zync
    3scale.net/service_id: "5"
    3scale.net/tenant_id: "5"
    zync.3scale.net/ingress: proxy
    zync.3scale.net/record: Z2lkOi8venluYy9Qcm94eS81
    zync.3scale.net/route-to: apicast-production
  name: zync-3scale-api-wmmdn
  namespace: 3scale-project
  ownerReferences:
  - apiVersion: apps.openshift.io/v1
    kind: DeploymentConfig
    name: zync-que
    uid: 466152c8-1c88-42e0-83bb-45eb3d7fefe4
  resourceVersion: "219480422"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/zync-3scale-api-wmmdn
  uid: 0a27f7c9-e003-4b46-bfd5-f83ed9f5b325
spec:
  host: api-dev-apicast-production.apps.osepext01.claro.amx
  port:
    targetPort: gateway
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: apicast-production
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-08-13T19:40:20Z"
      status: "True"
      type: Admitted
    host: api-dev-apicast-production.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-08-13T19:40:21Z"
      status: "True"
      type: Admitted
    host: api-dev-apicast-production.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
