00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/zync-3scale-master-gvvqq.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    3scale.net/gid: gid://zync/Entry/12
    zync.3scale.net/gid: gid://zync/Provider/1
    zync.3scale.net/host: master.apps.osepext01.claro.amx
  creationTimestamp: "2020-07-27T14:02:49Z"
  generateName: zync-3scale-master-
  labels:
    3scale.net/created-by: zync
    3scale.net/provider_id: "1"
    3scale.net/tenant_id: "1"
    zync.3scale.net/ingress: provider
    zync.3scale.net/record: Z2lkOi8venluYy9Qcm92aWRlci8x
    zync.3scale.net/route-to: system-master
  name: zync-3scale-master-gvvqq
  namespace: 3scale-project
  ownerReferences:
  - apiVersion: apps.openshift.io/v1
    kind: DeploymentConfig
    name: zync-que
    uid: 466152c8-1c88-42e0-83bb-45eb3d7fefe4
  resourceVersion: "198428151"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/zync-3scale-master-gvvqq
  uid: 1c31050a-44eb-4b4a-a187-c1a4696b83a9
spec:
  host: master.apps.osepext01.claro.amx
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: system-master
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-07-27T14:02:51Z"
      status: "True"
      type: Admitted
    host: master.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-07-27T14:02:49Z"
      status: "True"
      type: Admitted
    host: master.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
