00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/zync-3scale-provider-5msqn.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    3scale.net/gid: gid://zync/Entry/89
    zync.3scale.net/gid: gid://zync/Provider/5
    zync.3scale.net/host: dev.apps.osepext01.claro.amx
  creationTimestamp: "2020-08-13T19:40:26Z"
  generateName: zync-3scale-provider-
  labels:
    3scale.net/created-by: zync
    3scale.net/provider_id: "5"
    3scale.net/tenant_id: "5"
    zync.3scale.net/ingress: provider
    zync.3scale.net/record: Z2lkOi8venluYy9Qcm92aWRlci81
    zync.3scale.net/route-to: system-developer
  name: zync-3scale-provider-5msqn
  namespace: 3scale-project
  ownerReferences:
  - apiVersion: apps.openshift.io/v1
    kind: DeploymentConfig
    name: zync-que
    uid: 466152c8-1c88-42e0-83bb-45eb3d7fefe4
  resourceVersion: "219480522"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/zync-3scale-provider-5msqn
  uid: d5b19143-8597-4d72-a8f7-e3bf081a4c09
spec:
  host: dev.apps.osepext01.claro.amx
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: system-developer
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-08-13T19:40:27Z"
      status: "True"
      type: Admitted
    host: dev.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-08-13T19:40:27Z"
      status: "True"
      type: Admitted
    host: dev.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
