00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/zync-3scale-provider-hvnpn.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    3scale.net/gid: gid://zync/Entry/104
    zync.3scale.net/gid: gid://zync/Provider/9
    zync.3scale.net/host: test-3scale.apps.osepext01.claro.amx
  creationTimestamp: "2020-08-13T19:50:13Z"
  generateName: zync-3scale-provider-
  labels:
    3scale.net/created-by: zync
    3scale.net/provider_id: "9"
    3scale.net/tenant_id: "9"
    zync.3scale.net/ingress: provider
    zync.3scale.net/record: Z2lkOi8venluYy9Qcm92aWRlci85
    zync.3scale.net/route-to: system-developer
  name: zync-3scale-provider-hvnpn
  namespace: 3scale-project
  ownerReferences:
  - apiVersion: apps.openshift.io/v1
    kind: DeploymentConfig
    name: zync-que
    uid: 466152c8-1c88-42e0-83bb-45eb3d7fefe4
  resourceVersion: "219488810"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/zync-3scale-provider-hvnpn
  uid: 15f0e774-fc97-4981-a249-190384f729d4
spec:
  host: test-3scale.apps.osepext01.claro.amx
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: system-developer
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-08-13T19:50:14Z"
      status: "True"
      type: Admitted
    host: test-3scale.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-08-13T19:50:13Z"
      status: "True"
      type: Admitted
    host: test-3scale.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
