00.3scale/01.tickets/3scale_dump-2020-09-21_18-19/routes/zync-3scale-provider-n6hw9.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    3scale.net/gid: gid://zync/Entry/133
    zync.3scale.net/gid: gid://zync/Provider/12
    zync.3scale.net/host: prod-3scale-admin.apps.osepext01.claro.amx
  creationTimestamp: "2020-08-21T15:11:22Z"
  generateName: zync-3scale-provider-
  labels:
    3scale.net/created-by: zync
    3scale.net/provider_id: "12"
    3scale.net/tenant_id: "12"
    zync.3scale.net/ingress: provider
    zync.3scale.net/record: Z2lkOi8venluYy9Qcm92aWRlci8xMg
    zync.3scale.net/route-to: system-provider
  name: zync-3scale-provider-n6hw9
  namespace: 3scale-project
  ownerReferences:
  - apiVersion: apps.openshift.io/v1
    kind: DeploymentConfig
    name: zync-que
    uid: 466152c8-1c88-42e0-83bb-45eb3d7fefe4
  resourceVersion: "228966462"
  selfLink: /apis/route.openshift.io/v1/namespaces/3scale-project/routes/zync-3scale-provider-n6hw9
  uid: 66ea182e-27ae-4dee-839c-d0163007b44a
spec:
  host: prod-3scale-admin.apps.osepext01.claro.amx
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: system-provider
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-08-21T15:11:22Z"
      status: "True"
      type: Admitted
    host: prod-3scale-admin.apps.osepext01.claro.amx
    routerCanonicalHostname: apps.osepext01.claro.amx
    routerName: default
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2020-08-21T15:11:22Z"
      status: "True"
      type: Admitted
    host: prod-3scale-admin.apps.osepext01.claro.amx
    routerCanonicalHostname: pci.testing.org
    routerName: testpci
    wildcardPolicy: None
